# cert-manager

./: .golangci.ci.yaml  LICENSES  go.mod  go.sum
RELEASE_NOTES/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.10.0.md  v0.10.1.md  v0.11.0-alpha.0.md  v0.11.0-beta.0.md  v0.11.0.md  v0.11.1.md  v0.12.0-beta.0.md  v0.12.0-beta.1.md  v0.12.0.md  v0.13.0-alpha.0.md  v0.13.0.md  v0.13.1.md  v0.14.0-alpha.0.md  v0.14.0-alpha.1.md  v0.14.0.md  v0.14.1.md  v0.14.2.md  v0.14.3.md  v0.15-alpha.3.md  v0.15.0-alpha.0.md  v0.15.0-alpha.1.md  v0.15.0-alpha.2.md  v0.15.0-beta.0.md  v0.15.0-beta.1.md  v0.15.0.md  v0.15.1.md  v0.15.2.md  v0.16.0-alpha.0.md  v0.16.0-alpha.1.md  v0.16.0.md  v0.16.1.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  (+53 more)
cmd/acmesolver/: LICENSES  go.mod  go.sum
cmd/acmesolver/app/: app.go
cmd/cainjector/: LICENSES  go.mod  go.sum
cmd/cainjector/app/: start.go
cmd/controller/: LICENSES  go.mod  go.sum
cmd/controller/app/: controller.go  start.go
cmd/controller/app/options/: options.go
cmd/core-issuers/: go.mod  go.sum  main.go
cmd/core-issuers/app/: controller.go  start.go
cmd/core-issuers/app/options/: options.go  options_test.go
cmd/core-issuers/controller/acmechallenges/: controller.go  sync.go  sync_test.go
cmd/core-issuers/controller/acmeorders/: controller.go  util.go
cmd/core-issuers/controller/certificaterequests/: controller.go  sync_test.go
cmd/core-issuers/controller/certificatesigningrequests/: checks.go  controller.go  controller_test.go  sync.go  sync_test.go
cmd/core-issuers/controller/clusterissuers/: controller.go
cmd/core-issuers/controller/issuers/: controller.go
cmd/core-issuers/internal/vault/: vault_test.go
cmd/core-issuers/issuer/acme/: acme.go
cmd/core-issuers/issuer/acme/dns/: dns.go  (+2 more)
cmd/core-issuers/issuer/ca/: ca.go
cmd/core-issuers/issuer/fake/: factory.go  helper.go  issuer.go
cmd/core-issuers/issuer/selfsigned/: selfsigned.go
cmd/core-issuers/issuer/vault/: setup.go  setup_test.go  vault.go
cmd/core-issuers/issuer/venafi/: setup_test.go  venafi.go
cmd/ctl/: LICENSES  go.mod  go.sum
cmd/ctl/pkg/check/: check.go
cmd/ctl/pkg/version/: version.go
cmd/startupapicheck/: LICENSES  go.mod  go.sum
cmd/webhook/: LICENSES  go.mod  go.sum
deploy/charts/: values.truth.yaml  values_gen.py
deploy/charts/cert-manager/: values.schema.json  values.yaml
deploy/charts/cert-manager/templates/: _helpers.tpl  core-issuers-deployment.yaml  core-issuers-psp-clusterrole.yaml  core-issuers-psp-clusterrolebinding.yaml  core-issuers-psp.yaml  core-issuers-rbac.yaml  core-issuers-serviceaccount.yaml  rbac.yaml
deploy/crds/: crd-certificates.yaml
devel/lib/: lib.sh
hack/: BUILD.bazel  scrape-release-manifests.sh  scrape-release-notes.sh
hack/containers/: Containerfile.core-issuers
internal/apis/certmanager/validation/: certificate.go
internal/controller/certificates/policies/: checks.go  checks_test.go  constants.go  gatherer.go  policies.go  violation.go
internal/controller/feature/: features.go
internal/informers/: core.go  core_basic.go  core_filteredsecrets.go  core_filteredsecrets_test.go
internal/webhook/feature/: features.go
make/: ci.mk  containers.mk  e2e.sh  server.mk  test.mk  tools.mk
make/config/samplewebhook/sample/: main.go
pkg/acme/webhook/: webhook.go
pkg/acme/webhook/apiserver/: apiserver_test.go
pkg/acme/webhook/openapi/: zz_generated.openapi.go
pkg/apis/certmanager/v1/: types_certificate.go
pkg/controller/: context.go  helper.go  util.go
pkg/controller/acmechallenges/: sync_test.go
pkg/controller/cainjector/: injectables.go
pkg/controller/certificaterequests/selfsigned/: selfsigned_test.go
pkg/controller/certificates/duplicatesecrets/: duplicatesecrets_controller.go  duplicatesecrets_controller_test.go
pkg/controller/certificates/issuing/: issuing_controller.go  issuing_controller_test.go  secret_manager.go
pkg/controller/certificates/readiness/: readiness_controller_test.go
pkg/controller/certificates/trigger/: trigger_controller_test.go
pkg/internal/api/mutation/: BUILD.bazel
pkg/internal/api/validation/: BUILD.bazel
pkg/issuer/acme/dns/: dns.go  util_test.go
pkg/util/kube/: pki.go
pkg/util/pki/: asn1_util.go  asn1_util_test.go  certificatetemplate.go  csr.go  csr_test.go  match_test.go  sans.go  sans_test.go  subject.go  subject_test.go
pkg/util/pki/internal/: dn.go  dn_test.go
pkg/util/versionchecker/: BUILD.bazel  fromclusterrole.go  versionchecker.go  versionchecker_test.go
pkg/util/versionchecker/testfixtures/: BUILD.bazel  manifests.go  v1.0.0-alpha.0.yaml  v1.0.0-alpha.1.yaml  v1.0.0-beta.0.yaml  v1.0.0-beta.1.yaml  v1.1.0-alpha.0.yaml  v1.1.0-alpha.1.yaml  v1.2.0-alpha.2.yaml  v1.3.0-alpha.0.yaml  v1.3.0-alpha.1.yaml  v1.3.0-beta.0.yaml  v1.4.0-alpha.0.yaml  v1.4.0-alpha.1.yaml  v1.4.0-beta.0.yaml  v1.4.0-beta.1.yaml  v1.5.0-alpha.0.yaml
test/acme/dns/: suite.go
test/e2e/: LICENSES  e2e_test.go  go.mod  go.sum
test/e2e/framework/helper/: certificatesigningrequests.go  secret.go
test/e2e/suite/certificates/: duplicatesecretname.go  ingress.go.old
test/e2e/suite/conformance/: import.go
test/integration/: LICENSES  go.mod  go.sum
test/integration/acme/: BUILD.bazel  orders_controller_test.go
test/integration/acmedns/: util.go
test/integration/certificates/: BUILD.bazel  issuing_controller_test.go  trigger_controller_test.go
test/integration/conversion/: BUILD.bazel
test/integration/ctl/: BUILD.bazel
test/integration/rfc2136_dns01/: provider_test.go  rfc2136_test.go
test/integration/validation/: BUILD.bazel
test/integration/versionchecker/: versionchecker_test.go
test/integration/webhook/: BUILD.bazel
test/issuerconformance/: conformance_test.go  go.mod
test/issuerconformance/certificates/: suite.go  tests.go
test/issuerconformance/certificatesigningrequests/: suite.go  tests.go
test/issuerconformance/framework/: framework.go
test/issuerconformance/framework/helper/: certificates.go  certificatesigningrequests.go  secret.go  validate.go
test/unit/listers/: secret.go
(+72 files in other folders)
