load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["orders_controller_test.go"],
    deps = [
        "//pkg/acme/accounts/test:go_default_library",
        "//pkg/acme/client:go_default_library",
        "//pkg/apis/acme/v1:go_default_library",
        "//pkg/apis/meta/v1:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/controller/acmeorders:go_default_library",
        "//pkg/logs:go_default_library",
        "//pkg/metrics:go_default_library",
        "//test/integration/framework:go_default_library",
        "//test/unit/gen:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_utils//clock:go_default_library",
        "@org_golang_x_crypto//acme:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "acme_test",
    srcs = ["orders_controller_test.go"],
    deps = [
        "//pkg/acme/accounts/test",
        "//pkg/acme/client",
        "//pkg/apis/acme/v1:acme",
        "//pkg/apis/meta/v1:meta",
        "//pkg/controller",
        "//pkg/controller/acmeorders",
        "//pkg/logs",
        "//pkg/metrics",
        "//test/integration/framework",
        "//test/unit/gen",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_utils//clock",
        "@org_golang_x_crypto//acme",
    ],
)
