load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "issuing_controller_test.go",
        "metrics_controller_test.go",
        "revisionmanager_controller_test.go",
        "trigger_controller_test.go",
    ],
    deps = [
        "//pkg/api/util:go_default_library",
        "//pkg/apis/certmanager/v1:go_default_library",
        "//pkg/apis/meta/v1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/controller/certificates/issuing:go_default_library",
        "//pkg/controller/certificates/metrics:go_default_library",
        "//pkg/controller/certificates/revisionmanager:go_default_library",
        "//pkg/controller/certificates/trigger:go_default_library",
        "//pkg/controller/certificates/trigger/policies:go_default_library",
        "//pkg/logs:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/util/pki:go_default_library",
        "//test/integration/framework:go_default_library",
        "//test/unit/gen:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_utils//clock:go_default_library",
        "@io_k8s_utils//clock/testing:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "certificates_test",
    srcs = [
        "issuing_controller_test.go",
        "metrics_controller_test.go",
        "revisionmanager_controller_test.go",
        "trigger_controller_test.go",
    ],
    deps = [
        "//pkg/api/util",
        "//pkg/apis/certmanager/v1:certmanager",
        "//pkg/apis/meta/v1:meta",
        "//pkg/client/clientset/versioned",
        "//pkg/controller",
        "//pkg/controller/certificates/issuing",
        "//pkg/controller/certificates/metrics",
        "//pkg/controller/certificates/revisionmanager",
        "//pkg/controller/certificates/trigger",
        "//pkg/controller/certificates/trigger/policies",
        "//pkg/logs",
        "//pkg/metrics",
        "//pkg/util/pki",
        "//test/integration/framework",
        "//test/unit/gen",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_utils//clock",
        "@io_k8s_utils//clock/testing",
    ],
)
